Sexta Refatoracao das pendências do projeto e criação de funções para manipulação com o banco de dados