@@ -9,16 +9,14 @@ import com.bibliotecalivrosemprestimos.port.input.UsuarioInputPort;
 import com.bibliotecalivrosemprestimos.port.output.UsuarioOutputPort;
 import com.bibliotecalivrosemprestimos.adapter.input.request.validation.CriarUsuarioRequest;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class UsuarioUseCase implements UsuarioInputPort {
 
     private final UsuarioOutputPort usuarioOutputPort;
 
-    private final UsuarioMapper usuarioMapper;
-
-    public UsuarioUseCase(UsuarioOutputPort usuarioOutputPort, UsuarioMapper usuarioMapper) {
+    public UsuarioUseCase(UsuarioOutputPort usuarioOutputPort) {
         this.usuarioOutputPort = usuarioOutputPort;
-        this.usuarioMapper = usuarioMapper;
     }
 
     @Override
@@ -60,6 +58,6 @@ public class UsuarioUseCase implements UsuarioInputPort {
          return usuarioOutputPort.findUsuariosComEmprestimos()
                 .stream()
                 .map(UsuarioMapper.INSTANCE::objectArrayToDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
